# postgresql-types

./: .ormolu  README.md  cabal.project  postgresql-types.cabal
.github/: copilot-instructions.md
.github/workflows/: build.yaml  bump.yaml  format-and-test.yaml  main-maintainance.yaml  release.yaml
src/base-extras/BaseExtras/: List.hs
src/declaration-dsl/DeclarationDsl/: Algebra.hs  Demo.hs  Prelude.hs  Scalars.hs
src/declaration-dsl/DeclarationDsl/Algebra/: Writes.hs
src/declaration-dsl/DeclarationDsl/Scalars/: Uuid.hs
src/declaration-layer/DeclarationLayer/: Algebra.hs  Demo.hs  Prelude.hs  Scalars.hs
src/declaration-layer/DeclarationLayer/Algebra/: Writes.hs
src/declaration-layer/DeclarationLayer/Scalars/: Uuid.hs
src/demo/: Main.hs
src/demo/Demo/: Statements.hs  Types.hs
src/demo/Demo/Statements/: SelectArtistById.hs
src/demo/Demo/Types/: Artist.hs  Genre.hs
src/integration-tests/: Main.hs
src/integration-tests/IntegrationTests/: Scopes.hs  Scripts.hs
src/integration-tests/Main/: Helpers.hs  Scopes.hs  Scripts.hs
src/integration-tests/PqProcedures/: Algebra.hs
src/integration-tests/PqProcedures/Procedures/: RunStatement.hs
src/jsonifier-aeson/: JsonifierAeson.hs
src/postgresql-simple-postgresql-types/PostgresqlSimple/: PostgresqlTypes.hs
src/postgresql-simple-postgresql-types/PostgresqlSimple/PostgresqlTypes/: Prelude.hs
src/pq-procedures/: PqProcedures.hs
src/pq-procedures/PqProcedures/: Algebra.hs  GetTypeInfoByName.hs  Procedures.hs  RunRoundtripQuery.hs  RunStatement.hs
src/pq-procedures/PqProcedures/Procedures/: GetTypeInfoByName.hs  RunRoundtripQuery.hs  RunStatement.hs
src/primitive-layer/: PrimitiveLayer.hs
src/primitive-layer/PrimitiveLayer/: Algebra.hs  Prelude.hs  Primitives.hs  Types.hs  Via.hs  Vias.hs  Writes.hs
src/primitive-layer/PrimitiveLayer/Primitives/: Bit.hs  Bool.hs  Box.hs  Bytea.hs  Char.hs  Cidr.hs  Circle.hs  Date.hs  Float4.hs  Float8.hs  Inet.hs  Int2.hs  Int4.hs  Int8.hs  Interval.hs  IntervalAsMicroseconds.hs  IntervalInMicroseconds.hs  Ip.hs  Json.hs  Jsonb.hs  Line.hs  Lseg.hs  Macaddr.hs  Macaddr8.hs  MicrosecondsInterval.hs  Money.hs  Numeric.hs  Oid.hs  Path.hs  Point.hs  Polygon.hs  Text.hs  Time.hs  Timestamp.hs  Timestamptz.hs  Timetz.hs  TimetzAsTimeOfDayAndTimeZone.hs  TimetzInTimeOfDayAndTimeZone.hs  Uuid.hs  Varbit.hs  (+2 more)
src/primitive-layer/PrimitiveLayer/Primitives/Cidr/: Ip.hs
src/primitive-layer/PrimitiveLayer/Primitives/Interval/: Micros.hs
src/primitive-layer/PrimitiveLayer/Primitives/Timetz/: Offset.hs  Time.hs
src/primitive-layer/PrimitiveLayer/Types/: Bit.hs  Bool.hs  Boolean.hs  Box.hs  Bytea.hs  Char.hs  Cidr.hs  Circle.hs  Date.hs  Float4.hs  Float8.hs  Inet.hs  Int2.hs  Int4.hs  Int8.hs  Interval.hs  IntervalAsMicroseconds.hs  Ip.hs  Json.hs  Jsonb.hs  Line.hs  Lseg.hs  Macaddr.hs  Macaddr8.hs  Money.hs  Multirange.hs  Numeric.hs  Oid.hs  Path.hs  Point.hs  Polygon.hs  Range.hs  Text.hs  Time.hs  Timestamp.hs  Timestamptz.hs  Timetz.hs  TimetzAsTimeOfDayAndTimeZone.hs  Tsquery.hs  Tsvector.hs  (+3 more)
src/primitive-layer/PrimitiveLayer/Types/Timetz/: Offset.hs  Time.hs
src/primitive-layer/PrimitiveLayer/Via/: IsMany.hs  IsPrimitive.hs  Mapping.hs  Primitive.hs
src/primitive-layer/PrimitiveLayer/Vias/: IsMany.hs  Primitive.hs
src/quick-check-extras/QuickCheckExtras/: Gen.hs
src/testcontainers-postgresql/: TestcontainersPostgresql.hs
src/time-extras/TimeExtras/: TimeOfDay.hs  TimeZone.hs
src/unit-tests/: BitSpec.hs  BoolSpec.hs  BoxSpec.hs  BpcharSpec.hs  ByteaSpec.hs  CharSpec.hs  CidrSpec.hs  CircleSpec.hs  DateSpec.hs  Float4Spec.hs  Float8Spec.hs  HstoreSpec.hs  InetSpec.hs  Int2Spec.hs  Int4Spec.hs  Int8Spec.hs  IntervalSpec.hs  JsonSpec.hs  JsonbSpec.hs  LineSpec.hs  LsegSpec.hs  Macaddr8Spec.hs  MacaddrSpec.hs  Main.hs  MoneySpec.hs  MultirangeSpec.hs  NumericSpec.hs  OidSpec.hs  PathSpec.hs  PointSpec.hs  PolygonSpec.hs  RangeSpec.hs  TextSpec.hs  TimeSpec.hs  TimestampSpec.hs  TimestamptzSpec.hs  TimetzSpec.hs  UuidSpec.hs  VarbitSpec.hs  VarcharSpec.hs
src/unit-tests/PostgresqlTypes/: BitSpec.hs  BoolSpec.hs  BoxSpec.hs  BpcharSpec.hs  ByteaSpec.hs  CharSpec.hs  CidrSpec.hs  CircleSpec.hs  CitextSpec.hs  DateSpec.hs  Float4Spec.hs  Float8Spec.hs  GeometrySpec.hs  HstoreSpec.hs  InetSpec.hs  Int2Spec.hs  Int4Spec.hs  Int8Spec.hs  IntervalSpec.hs  JsonSpec.hs  JsonbSpec.hs  LineSpec.hs  LsegSpec.hs  Macaddr8Spec.hs  MacaddrSpec.hs  MoneySpec.hs  MultirangeSpec.hs  NumericSpec.hs  OidSpec.hs  PathSpec.hs  PointSpec.hs  PolygonSpec.hs  RangeSpec.hs  TextSpec.hs  TimeSpec.hs  TimestampSpec.hs  TimestamptzSpec.hs  TimetzSpec.hs  TsvectorSpec.hs  UuidSpec.hs  (+2 more)
src/unit-tests/UnitTests/: Scripts.hs
