cabal-version: 3.0
name: postgresql-types
version: 0
category: PostgreSQL, Codecs
synopsis: Precise PostgreSQL types representation and driver-agnostic codecs
description:
  Haskell representation of PostgreSQL data types with mappings to and from both
  binary and textual formats of the PostgreSQL wire protocol.

  This library is about precision. It aims to reproduce the PostgreSQL type system as closely as possible.

  Types are represented with hidden constructors, ensuring only valid PostgreSQL
  values can be constructed. Conversions use the lawful-conversions library for
  safe, well-defined transformations. Exhaustively tested against PostgreSQL 9-18
  with property-based testing covering the complete range of valid PostgreSQL values.

  The library can be used as the basis for various PostgreSQL libraries.

  Ecosystem integration adapters are available for:

  * hasql: <https://hackage-content.haskell.org/package/hasql-postgresql-types>

  * postgresql-simple: <https://hackage-content.haskell.org/package/postgresql-simple-postgresql-types>

homepage: https://github.com/nikita-volkov/postgresql-types
bug-reports: https://github.com/nikita-volkov/postgresql-types/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov
license: MIT
license-file: LICENSE
extra-doc-files:
  LICENSE
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/postgresql-types

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    PostgresqlTypes
    PostgresqlTypes.Types.Cidr
    PostgresqlTypes.Types.Inet
    PostgresqlTypes.Types.Interval
    PostgresqlTypes.Types.Numeric
    PostgresqlTypes.Types.Timetz

  other-modules:
    PostgresqlTypes.Prelude
    PostgresqlTypes.Prelude.LawfulConversions
    PostgresqlTypes.Types
    PostgresqlTypes.Types.Bit
    PostgresqlTypes.Types.Bool
    PostgresqlTypes.Types.Box
    PostgresqlTypes.Types.Bpchar
    PostgresqlTypes.Types.Bytea
    PostgresqlTypes.Types.Char
    PostgresqlTypes.Types.Circle
    PostgresqlTypes.Types.Date
    PostgresqlTypes.Types.Float4
    PostgresqlTypes.Types.Float8
    PostgresqlTypes.Types.Hstore
    PostgresqlTypes.Types.Int2
    PostgresqlTypes.Types.Int4
    PostgresqlTypes.Types.Int8
    PostgresqlTypes.Types.Json
    PostgresqlTypes.Types.Jsonb
    PostgresqlTypes.Types.Line
    PostgresqlTypes.Types.Lseg
    PostgresqlTypes.Types.Macaddr
    PostgresqlTypes.Types.Macaddr8
    PostgresqlTypes.Types.Money
    PostgresqlTypes.Types.Multirange
    PostgresqlTypes.Types.Numeric.Integer
    PostgresqlTypes.Types.Numeric.Scientific
    PostgresqlTypes.Types.Oid
    PostgresqlTypes.Types.Path
    PostgresqlTypes.Types.Point
    PostgresqlTypes.Types.Polygon
    PostgresqlTypes.Types.Range
    PostgresqlTypes.Types.Text
    PostgresqlTypes.Types.Time
    PostgresqlTypes.Types.Timestamp
    PostgresqlTypes.Types.Timestamptz
    PostgresqlTypes.Types.Timetz.Offset
    PostgresqlTypes.Types.Timetz.Time
    PostgresqlTypes.Types.Uuid
    PostgresqlTypes.Types.Varbit
    PostgresqlTypes.Types.Varchar
    PostgresqlTypes.Via
    PostgresqlTypes.Via.IsMany
    PostgresqlTypes.Via.IsScalar
    PostgresqlTypes.Via.IsSome
    PostgresqlTypes.Writes

  build-depends:
    QuickCheck >=2.14 && <3,
    aeson >=2.2 && <3,
    attoparsec >=0.14 && <0.19,
    base >=4.11 && <5,
    bytestring >=0.10 && <0.13,
    containers >=0.6 && <0.9,
    invariant ^>=0.6.4,
    jsonifier ^>=0.2.1.3,
    lawful-conversions ^>=0.3.1,
    mtl >=2.2 && <3,
    postgresql-types:base-extras,
    postgresql-types:jsonifier-aeson,
    postgresql-types:time-extras,
    postgresql-types-algebra,
    profunctors ^>=5.6 && <6,
    ptr-peeker ^>=0.1,
    ptr-poker ^>=0.1.3,
    quickcheck-extras ^>=0.1,
    quickcheck-instances ^>=0.3.33,
    scientific >=0.3 && <1,
    tagged ^>=0.8.9,
    text >=1.2 && <3,
    text-builder ^>=1.0.0.4,
    text-builder-lawful-conversions ^>=0.1.4,
    time >=1.12 && <2,
    transformers >=0.5 && <0.7,
    uuid >=1.3 && <2,
    vector ^>=0.13,

library jsonifier-aeson
  import: base
  hs-source-dirs: src/jsonifier-aeson
  exposed-modules:
    JsonifierAeson

  other-modules:
  build-depends:
    aeson >=2.2 && <3,
    base >=4.11 && <5,
    jsonifier ^>=0.2.1.3,

library time-extras
  import: base
  hs-source-dirs: src/time-extras
  exposed-modules:
    TimeExtras.TimeOfDay
    TimeExtras.TimeZone

  other-modules:
  build-depends:
    base >=4.11 && <5,
    time >=1.12 && <2,

library base-extras
  import: base
  hs-source-dirs: src/base-extras
  exposed-modules:
    BaseExtras.List

library pq-procedures
  import: base
  hs-source-dirs: src/pq-procedures
  exposed-modules:
    PqProcedures
    PqProcedures.Algebra
    PqProcedures.Procedures

  other-modules:
    PqProcedures.Procedures.GetTypeInfoByName
    PqProcedures.Procedures.RunRoundtripQuery
    PqProcedures.Procedures.RunStatement

  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10 && <0.13,
    lawful-conversions ^>=0.3.1,
    postgresql-libpq >=0.10 && <0.12,
    ptr-peeker ^>=0.1,
    text >=1.2 && <3,
    text-builder ^>=1.0.0.4,
    text-builder-lawful-conversions ^>=0.1.4,

test-suite unit-tests
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/unit-tests
  main-is: Main.hs
  other-modules:
    CidrSpec
    InetSpec
    IntervalSpec
    NumericSpec
    TimetzSpec

  build-depends:
    QuickCheck >=2.14 && <3,
    aeson >=2.2 && <3,
    attoparsec >=0.14 && <0.15,
    base >=4.11 && <5,
    bytestring >=0.10 && <0.13,
    containers >=0.6 && <0.9,
    hspec >=2.11 && <3,
    lawful-conversions ^>=0.3.1,
    postgresql-types,
    postgresql-types-algebra,
    ptr-peeker ^>=0.1,
    ptr-poker ^>=0.1.2.16,
    scientific >=0.3 && <1,
    tagged ^>=0.8.9,
    text >=1.2 && <3,
    text-builder ^>=1.0.0.4,
    time >=1.12 && <2,
    uuid >=1.3 && <2,
    vector ^>=0.13,

test-suite integration-tests
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/integration-tests
  main-is: Main.hs
  other-modules:
    Main.Scopes
    Main.Scripts

  build-depends:
    QuickCheck >=2.14 && <3,
    async >=2.2.6 && <2.3,
    attoparsec >=0.14 && <0.15,
    base >=4.11 && <5,
    bytestring >=0.10 && <0.13,
    hspec >=2.11 && <3,
    lawful-conversions ^>=0.3.1,
    postgresql-libpq >=0.10 && <0.12,
    postgresql-types,
    postgresql-types:pq-procedures,
    postgresql-types-algebra,
    ptr-peeker ^>=0.1,
    ptr-poker ^>=0.1.2.16,
    quickcheck-instances ^>=0.3.33,
    stm >=2.5 && <3,
    tagged ^>=0.8.9,
    testcontainers-postgresql ^>=0.2.0.1,
    text >=1.2 && <3,
    text-builder ^>=1.0.0.4,
